<resources>
    <string name="app_name">Sweat Proof</string>
    <string name="permissions_rationale">

        These are the permissions we require for you to fully enjoy this app.
        Without these permissions the app sadly has very little utility.
        \nLocation for tracking\n
        \nActivity recognition is for the step counter.\n
        \nCamera recognitions is required for pictures and AR\n
        We only use notification to keep you updated that you are tracking.
    </string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="info">Info</string>
    <string name="close">Close App</string>
    <string name="record">Record</string>
    <string name="accelerometer">ACCELEROMETER</string>
    <string name="gyroscope">GYROSCOPE</string>
    <string name="stop_recording">STOP RECORDING</string>
    <string name="accelerator_data">ACCELERATOR DATA</string>
    <string name="gyroscope_data">GYROSCOPE DATA</string>
    <string name="heading_data">HEADING DATA</string>
    <string name="computed_orientation">COMPUTED ORIENTATION</string>
    <string name="filtered_gyro_data">FILTERED GYRO DATA</string>
    <string name="magnetometer">MAGNETOMETER</string>
    <string name="filtered_magnetometer">FILTERED MAGNETOMETER</string>
    <string name="filtered_acceleration">FILTERED ACCELERATION</string>
    <string name="delete_are_you_sure">Are you sure you want to delete this POI</string>
    <string name="about_app">About this app</string>
    <string name="info_text">As a digital nomad, you know that the key to traveling the world is being able to stay connected. And with your busy lifestyle, you don\'t have time to research long lists of travel apps. That\'s why we built the world\'s most comprehensive app for digital nomads. With our app, you can visit places with visual descriptions of the areas (POI – points of interest)\n\n When the user is near the area he/she can take up the camera and observe graphics with associated text related to the place.\n\n App has built in features such as menu to edit settings, language, theme etc.\n\nTemporary views for: MAP, CAMERA, GRAPH, INFORMATION\n\nRaw and filtered Sensor recording of accelerometer, gyroscope\n\nComputed orientation using accelerometer and magnetometer\n\nVisualization of the sensor data with orientation\nThis app was developed during a student project by a team (Team ID=6) of three members:\n\nMagnus Roald Ree  \nTore Bjerkan Tore Bjerkan\nSharmila Ratnasingam\n
</string>
    <string name="pause_run">Pause</string>
    <string name="resume_tracking">Resume</string>
    <string name="edit_pois">Edit POI\'s</string>
    <string name="change_poi_location_warning">Save POI\'s new location?</string>
    <string name="current_location">Current Location:</string>
    <string name="no_location_information">No Location Information</string>
    <string name="save_poi">Save POI</string>
    <string name="cancel">Cancel</string>
    <string name="poi_title">POI Title</string>
    <string name="poi_description">POI Description</string>

    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="graph">Graph</string>
    <string name="unknown">Unknown</string>
    <string name="plane_finding">detecting plane…</string>
    <string name="_week_item">Week %d</string>
    <string name="help_text">Here, the user gets the opportunity to track their own activity. By pressing start, the app starts tracking the movements.
The app draws a line along the path where the user moves. In case the cursor of the user is not visible,
is it possible to press \'here\' to center the map on the marker.</string>
    <string name="list">List</string>
    <string name="map">Map</string>
    <string name="camera">Camera</string>
    <string name="statistics">Statistics</string>
    <string name="title">Title</string>
    <string name="distance">Distance</string>
    <string name="elevation">Elevation</string>
    <string name="help_info">Help info</string>
    <string name="open">open</string>
    <string name="see_in_ar">See in AR</string>
    <string name="target">Target</string>
    <string name="start">Start</string>
    <string name="add_poi">Add POI</string>
    <string name="here">here</string>
    <string name="add_poi_help">Click on map to add a point there</string>
    <string name="go_to_ar_help">You must select a marker(poi) first!</string>
    <string name="missing_camera_permissions">You need to allow camerapermissions in Android Settings to use this feature</string>
    <string name="distance_formatted_string">Distance: %.2f m</string>
    <string name="steps_formatted_string">Steps: %d</string>
    <string name="stop">Stop</string>
    <string name="no_snapshot_image">There is no image connected to this point!</string>
    <string name="tracking_info_format_string">You ran %.2f meters in %.2f seconds at an average speed of %.2f m/s</string>
    <string name="image">image</string>
    <string name="location">location</string>
    <string name="the_image_connected_to_this_point">The Image connected to this point</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="other_info">Other Info</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="loading">Loading</string>
    <string name="CreditPage">Credit page showing name and product idea</string>
    <string name="ok">OK</string>
    <string name="gps_is_disabled">GPS is disabled</string>
    <string name="altitude_graph_description">x: distance (in meters) y: height (in meters)</string>
    <string name="steps_graph_description">X-axis: Date Y-axis: Steps</string>
    <string name="distance_graph_description">X-axis: Date Y-axis: Distance (in meters)</string>
    <string name="time_graph_description">X-axis: Date Y-axis: Time Taken (in minutes)</string>
    <string name="ascent_graph_description">X-axis: Date Y-axis: Total Ascent</string>
    <string name="steps">Steps</string>
    <string name="time_taken">Time taken</string>
    <string name="total_ascent">Total Ascent</string>
    <string name="_empty_data">Oh, there is nothing to show here.\nGet out there and record some activities</string>
</resources>