<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/miSettings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="always"/>

    <item
        android:id="@+id/miHelp"
        android:title="@string/help"
        android:icon="@drawable/ic_help"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/miInfo"
        android:title="@string/info"
        android:icon="@drawable/ic_info"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/miClose"
        android:title="@string/close"
        app:showAsAction="never"
        />

</menu>