<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.PointOfInterestFragment">

    <data>

        <variable
            name="viewModel"
            type="com.example.turapp.viewmodels.PointOfInterestViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <com.example.turapp.utils.helperFiles.LockableScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">


                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/btnLocImgGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:selectionRequired="true"
                    app:singleSelection="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnGrpImage"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/image"
                        app:icon="@drawable/ic_image"
                        app:iconGravity="top" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnGrpLocation"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        app:icon="@drawable/ic_map"
                        app:iconGravity="top"
                        android:checked="true"/>

                </com.google.android.material.button.MaterialButtonToggleGroup>

                <FrameLayout
                    android:id="@+id/frameForMap"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btnLocImgGroup"
                    android:visibility="gone">

                    <org.osmdroid.views.MapView
                        android:id="@+id/mapHolder"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusable="false" />


                </FrameLayout>



                <ImageView
                    android:id="@+id/imgHolder"
                    loadListImage="@{viewModel.myPoint.image}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:contentDescription="@string/the_image_connected_to_this_point"
                    app:layout_constraintTop_toBottomOf="@+id/frameForMap"
                    android:visibility="gone"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titleInputFieldHolder"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:minWidth="88dp"
                    app:layout_constraintTop_toBottomOf="@+id/imgHolder">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titleInputField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/makeDisabledEditTextLookGood" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/descInputFieldHolder"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:minWidth="88dp"
                    app:layout_constraintTop_toBottomOf="@+id/titleInputFieldHolder">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/descInputField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/makeDisabledEditTextLookGood" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dateInputFieldHolder"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date"
                    android:minWidth="88dp"
                    app:layout_constraintTop_toBottomOf="@+id/descInputFieldHolder">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dateInputField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/makeDisabledEditTextLookGood" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/otherInfoInputFieldHolder"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/other_info"
                    android:minWidth="88dp"
                    app:layout_constraintTop_toBottomOf="@+id/dateInputFieldHolder"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/otherInfoInputField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:textColor="@color/makeDisabledEditTextLookGood" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/bottomNavPointOfInterestFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/otherInfoInputFieldHolder">


                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnEdit"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/edit"
                        app:icon="@drawable/ic_edit_24"
                        app:iconGravity="textTop"
                        android:visibility="gone"/>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDeleteMyPointOrSaveEdits"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/delete"
                        app:icon="@drawable/ic_delete"
                        app:iconGravity="textTop" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnBack"
                        style="?attr/materialButtonOutlinedStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/back"
                        app:icon="@drawable/ic_arrow_back"
                        app:iconGravity="textTop" />


                </com.google.android.material.button.MaterialButtonToggleGroup>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.example.turapp.utils.helperFiles.LockableScrollView>

        <ImageView
            android:id="@+id/loadingScreen"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:foreground="@drawable/loading_animation"
            android:foregroundGravity="center"
            android:background="#D7F7941D"
            android:contentDescription="@string/loading"
            >


        </ImageView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>