<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.LiveSensorDataFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.turapp.viewmodels.LiveSensorDataViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">


        <ScrollView
            android:id="@+id/svOtherSensors"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/btRecord"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/card_background">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginBottom="8dp">
                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchAccRec"
                            style="@style/heading_textSize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/accelerator_data"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/tvAccSensor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/switchAccRec"
                            tools:text="X: 0.05 Y: 0.34 Z: 2.57"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/card_background">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp">

                        <TextView
                            android:id="@+id/tvFilteredAcc"
                            style="@style/heading_textSize"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/filtered_acceleration"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <TextView
                            android:id="@+id/tvFilteredAccData"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/tvFilteredAcc"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/card_background">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchGyroRec"
                            style="@style/heading_textSize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/gyroscope_data"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <TextView
                            android:id="@+id/tvGyroSensor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/switchGyroRec"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/card_background">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp">

                        <TextView
                            android:id="@+id/tvFilteredGyro"
                            style="@style/heading_textSize"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/filtered_gyro_data"
                            app:layout_constraintTop_toTopOf="parent"/>

                        <TextView
                            android:id="@+id/tvFilteredGyroData"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/tvFilteredGyro"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/card_background">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchMagnetoRec"
                            style="@style/heading_textSize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/magnetometer"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <TextView
                            android:id="@+id/tvMagnetoSensor"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/switchMagnetoRec"/>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/card_background">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp">

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchOrientationRec"
                            style="@style/heading_textSize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/computed_orientation"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <TextView
                            android:id="@+id/tvOrientationData"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/switchOrientationRec"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    app:cardElevation="0dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/card_background">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:layout_marginVertical="8dp">


                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/switchMovementRec"
                            style="@style/heading_textSize"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/movement_detection"
                            app:layout_constraintTop_toTopOf="parent"/>
                        <TextView
                            android:id="@+id/tvMovementData"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@+id/switchMovementRec"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>


        </ScrollView>

        <Button
            android:id="@+id/btRecord"
            android:text="@string/record"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/theme_blue"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>